apps/main-site/air-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: air-quality-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: air-quality-api
  template:
    metadata:
      labels:
        app: air-quality-api
    spec:
      containers:
      - name: api-container
        image: alidurmusde/munich-air-api:v7
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: air-quality-service
  namespace: default
spec:
  selector:
    app: air-quality-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
