apps/main-site/landing-page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: nginx
        image: nginx:1.25-alpine
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: landing-page-html
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page-service
spec:
  selector:
    app: landing-page
  ports:
    - port: 80
      targetPort: 80
