apps/main-site/air-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: air-quality-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - air.pactnote.com
    secretName: air-pactnote-tls
  rules:
  - host: air.pactnote.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: air-quality-service
            port:
              number: 80
